Make gridboxes no longer overflow container

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,4 @@
 .gridBox{
     border: 1px solid #333;
     flex: 1 1 auto;
-    min-width: 20px;
-    min-height: 20px;
 }
